test/neg/bug74.scala
class A {
  def f = Int.super.hashCode;
}
